Issue #2019345 by johnv: Updated workfow_rules to reflect latest code. Still only supports 'node'.
Issue #2019345 by johnv: Changed constructor of Workflow to be protected.
Issue #2102193 by johnv: Changed call to 'hook_workflow', 'transition permitted' - arguments were swapped.
Issue #2019345 by johnv: Fixed 'force' parameter in call to hook_workflow.
Issue #2019345 by johnv: Added some love to the Workflow Form: less space for schedule block.
Issue #2019345 by johnv: Added some love to the Workflow Form.
Issue #2019345 by johnv: Added some Node/Field API dependent flow logic.
Issue #2137149 by johnv: Changed Workflow History Tab to show workflow_transition_form instead of workflow_node_form.
Issue #2137149 by johnv: Changed Node View page to show workflow_transition_form instead of workflow_node_form.
Issue #2137149 by johnv: Removed workflow_tab_form code, since it is replaced by workflow_transition_form.
Issue #2137219 by johnv: Changed workflow_actions to support Workflow Field.
Issue #2122541 by johnv: Fixed strict warnings in WorkflowScheduledTransition.
Issue #2137149 by johnv: Changed Node Edit page to show workflow_transition_form instead of workflow_node_form.
Issue #2019345 by johnv: Fixed notices on WorkflowDefaultWidget.
Issue #2137149 by johnv: Changed Node Comment form to show workflow_transition_form instead of workflow_node_form.
Issue #2137149 by johnv: Changed code to use workflow_state_formatter to show Current State on any form.
Issue #2137149 by johnv: Removed workflow_node_form: use workflow_transition_form instead.
Issue #2019345 by johnv: Fixed enable changing nodes on front page.
Issue #2019345 by johnv: Fixed expand schedule block when +1 forms on a page.
Issue #2120451 by Kirsten Pol: Fixed superfluous sort when loading workflow_history_node.
Issue #212429 by johnv: Fixed do not revert to deleted, disabled, same state in workflow_revert.

Since 7.x-2.0-beta1