@@ -294,3 +294,4 @@ Issue #2120451 by Kirsten Pol: Fixed superfluous sort when loading workflow_hist
 Issue #212429 by johnv: Fixed do not revert to deleted, disabled, same state in workflow_revert.
 
 Since 7.x-2.0-beta1
+Issue #2141763 by johnv: Fixed avoid calling hook_worflow when saving an Entity and state has not changed.
